--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "echo 'No build needed'",
-  "outputDirectory": ".",
   "functions": {
-    "api/**/*.js": {
+    "api/releases.js": {
+      "runtime": "nodejs22.x"
+    },
+    "api/tasks.js": {
       "runtime": "nodejs22.x"
     }
   }
